fix: font colors in dark mode (temporary)

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -4,18 +4,18 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #213547;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --colors-primary: #FF3B3F;
-  --colors-secondary: #CAEBF2;
-  --colors-background: #EFEFEF;
-  --colors-text: #A9A9A9;
+  --colors-primary: #ff3b3f;
+  --colors-secondary: #caebf2;
+  --colors-background: #efefef;
+  --colors-text: #a9a9a9;
   --colors-backgroundDark: #252525;
 }
 
@@ -72,19 +72,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
